refactor(pages): update to use semantic tags

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -8,8 +8,8 @@
     <title>Coming Soon | Netflix</title>
   </head>
   <body>
-    <div id="page-content">
-      <div class="status-bar">
+    <main id="page-content">
+      <header class="status-bar">
         <p class="status-bar__time">9:41</p>
         <div class="status-bar__icons">
           <img
@@ -23,9 +23,9 @@
             alt="Bateria"
           />
         </div>
-      </div>
+      </header>
 
-      <div class="notifications">
+      <section class="notifications">
         <div class="notifications__title">
           <div class="notifications__icon">
             <img src="assets/icons/bell.svg" alt="Notificações" />
@@ -58,9 +58,9 @@
             </div>
           </li>
         </ul>
-      </div>
+      </section>
 
-      <div class="movie-previews">
+      <section class="movie-previews">
         <div class="movie-preview">
           <img
             class="movie-preview__img"
@@ -166,10 +166,10 @@
             </ul>
           </div>
         </div>
-      </div>
+      </section>
 
       <div class="bottom-navbar__background">
-        <div class="bottom-navbar">
+        <nav class="bottom-navbar">
           <a href="home.html" class="bottom-navbar__button">
             <img src="assets/icons/home.svg" alt="Home" />
             <p class="bottom-navbar__text">Home</p>
@@ -196,9 +196,9 @@
             <img src="assets/icons/more.svg" alt="Mais" />
             <p class="bottom-navbar__text">More</p>
           </a>
-        </div>
+        </nav>
       </div>
-    </div>
+    </main>
 
     <div class="max-resolution">
       <p class="max-resolution__text">
