--- a/downloads.html
+++ b/downloads.html
@@ -12,8 +12,8 @@
     ></script>
   </head>
   <body>
-    <div id="page-content">
-      <div class="status-bar">
+    <main id="page-content">
+      <header class="status-bar">
         <p class="status-bar__time">9:41</p>
         <div class="status-bar__icons">
           <img
@@ -27,25 +27,25 @@
             alt="Bateria"
           />
         </div>
-      </div>
+      </header>
 
       <div class="center">
-        <div class="smart-downloads">
+        <section class="smart-downloads">
           <img
             src="assets/icons/gear.svg"
             alt="Configurações"
             class="smart-downloads__img"
           />
           <p class="smart-downloads__text">Smart Downloads</p>
-        </div>
+        </section>
 
-        <div class="titles">
+        <section class="titles">
           <h1 class="titles__main">Introducing Downloads For You</h1>
           <h2 class="titles__secondary">
             Let's get a personalized selection of movies and series so you'll
             always have a title to watch on your mobile.
           </h2>
-        </div>
+        </section>
 
         <img
           class="image"
@@ -58,7 +58,7 @@
       </div>
 
       <div class="bottom-navbar__background">
-        <div class="bottom-navbar">
+        <nav class="bottom-navbar">
           <a href="home.html" class="bottom-navbar__button">
             <img src="assets/icons/home.svg" alt="Home" />
             <p class="bottom-navbar__text">Home</p>
@@ -85,9 +85,9 @@
             <img src="assets/icons/more.svg" alt="Mais" />
             <p class="bottom-navbar__text">More</p>
           </a>
-        </div>
+        </nav>
       </div>
-    </div>
+    </main>
 
     <div class="max-resolution">
       <p class="max-resolution__text">
