--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
     <title>Home | Netflix</title>
   </head>
   <body>
-    <div id="page-content">
-      <div class="status-bar">
+    <main id="page-content">
+      <header class="status-bar">
         <p class="status-bar__time">9:41</p>
         <div class="status-bar__icons">
           <img
@@ -23,9 +23,9 @@
             alt="Bateria"
           />
         </div>
-      </div>
+      </header>
 
-      <div class="navbar">
+      <nav class="navbar">
         <a href=".">
           <img
             class="navbar__logo"
@@ -36,11 +36,11 @@
         <a class="navbar__link" href="#">TV Shows</a>
         <a class="navbar__link" href="#">Movies</a>
         <a class="navbar__link" href="#">My List</a>
-      </div>
+      </nav>
 
       <div class="movie-background"></div>
 
-      <div class="play">
+      <section class="play">
         <div class="play__top-ten">
           <img class="play__img" src="assets/images/top10.png" alt="Top 10" />
           <p class="play__title">#3 in Brazil Today</p>
@@ -71,11 +71,11 @@
             <p class="play__text">Info</p>
           </a>
         </div>
-      </div>
+      </section>
 
       <h1 class="title title--big">Previews</h1>
 
-      <div class="movie-list" id="previews">
+      <section class="movie-list" id="previews">
         <img
           class="movie-list__img movie-list__img--rounded"
           src="assets/images/movie1.png"
@@ -96,11 +96,11 @@
           src="assets/images/movie4.png"
           alt="The Blacklist"
         />
-      </div>
+      </section>
 
       <h1 class="title">Top 10 in Brazil Today</h1>
 
-      <div class="movie-list">
+      <section class="movie-list">
         <img
           class="movie-list__img"
           src="assets/images/movie2.png"
@@ -121,11 +121,11 @@
           src="assets/images/movie1.png"
           alt="Lucifer"
         />
-      </div>
+      </section>
 
       <h1 class="title">Popular on Netflix</h1>
 
-      <div class="movie-list">
+      <section class="movie-list">
         <img
           class="movie-list__img"
           src="assets/images/movie2.png"
@@ -146,11 +146,11 @@
           src="assets/images/movie1.png"
           alt="Lucifer"
         />
-      </div>
+      </section>
 
       <h1 class="title">Trending Now</h1>
 
-      <div class="movie-list">
+      <section class="movie-list">
         <img
           class="movie-list__img"
           src="assets/images/movie2.png"
@@ -171,11 +171,11 @@
           src="assets/images/movie1.png"
           alt="Lucifer"
         />
-      </div>
+      </section>
 
       <h1 class="title">Netflix Originals</h1>
 
-      <div class="movie-list">
+      <section class="movie-list">
         <img
           class="movie-list__img movie-list__img--big"
           src="assets/images/movie2.png"
@@ -196,11 +196,11 @@
           src="assets/images/movie4.png"
           alt="The Blacklist"
         />
-      </div>
+      </section>
 
       <h1 class="title">New Releases</h1>
 
-      <div class="movie-list">
+      <section class="movie-list">
         <img
           class="movie-list__img"
           src="assets/images/movie2.png"
@@ -221,10 +221,10 @@
           src="assets/images/movie1.png"
           alt="Lucifer"
         />
-      </div>
+      </section>
 
       <div class="bottom-navbar__background">
-        <div class="bottom-navbar">
+        <nav class="bottom-navbar">
           <a href="home.html" class="bottom-navbar__button">
             <img src="assets/icons/home-active.svg" alt="Home" />
             <p class="bottom-navbar__text bottom-navbar__text--active">Home</p>
@@ -249,9 +249,9 @@
             <img src="assets/icons/more.svg" alt="Mais" />
             <p class="bottom-navbar__text">More</p>
           </a>
-        </div>
+        </nav>
       </div>
-    </div>
+    </main>
 
     <div class="max-resolution">
       <p class="max-resolution__text">
