--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     ></script>
   </head>
   <body>
-    <div id="page-content">
-      <div class="status-bar">
+    <main id="page-content">
+      <header class="status-bar">
         <p class="status-bar__time">9:41</p>
         <div class="status-bar__icons">
           <img
@@ -27,12 +27,12 @@
             alt="Bateria"
           />
         </div>
-      </div>
+      </header>
 
       <a class="center" href="profile.html">
         <img class="logo" src="assets/icons/logo.svg" alt="Logo" />
       </a>
-    </div>
+    </main>
 
     <div class="max-resolution">
       <p class="max-resolution__text">
