--- a/more.html
+++ b/more.html
@@ -12,8 +12,8 @@
     ></script>
   </head>
   <body>
-    <div id="page-content">
-      <div class="status-bar">
+    <main id="page-content">
+      <header class="status-bar">
         <p class="status-bar__time">9:41</p>
         <div class="status-bar__icons">
           <img
@@ -27,9 +27,9 @@
             alt="Bateria"
           />
         </div>
-      </div>
+      </header>
 
-      <div class="profile-list">
+      <section class="profile-list">
         <a class="profile-list__item profile-list__item">
           <img
             class="profile-list__img"
@@ -69,7 +69,7 @@
             alt="Adicionar perfil"
           />
         </a>
-      </div>
+      </section>
 
       <button type="button" class="manage">
         <img
@@ -81,7 +81,7 @@
       </button>
 
       <div class="share__background">
-        <div class="share">
+        <section class="share">
           <div class="share-title">
             <img src="assets/icons/message.svg" alt="Fale com Amigos" />
             <h1 class="share-title__text">Tell friends about Netflix.</h1>
@@ -133,10 +133,10 @@
               More
             </button>
           </div>
-        </div>
+        </section>
       </div>
 
-      <div class="settings">
+      <section class="settings">
         <div class="settings-check">
           <a class="settings-check__text" href="#">
             <img src="assets/icons/check.svg" alt="Minha Lista" />
@@ -150,10 +150,10 @@
           ><a class="settings__link" href="#"> <li>Help</li> </a
           ><a class="settings__link" href="#"> <li>Sign Out</li> </a>
         </ul>
-      </div>
+      </section>
 
       <div class="bottom-navbar__background">
-        <div class="bottom-navbar">
+        <nav class="bottom-navbar">
           <a href="home.html" class="bottom-navbar__button">
             <img src="assets/icons/home.svg" alt="Home" />
             <p class="bottom-navbar__text">Home</p>
@@ -178,9 +178,9 @@
             <img src="assets/icons/more-active.svg" alt="Mais" />
             <p class="bottom-navbar__text bottom-navbar__text--active">More</p>
           </a>
-        </div>
+        </nav>
       </div>
-    </div>
+    </main>
 
     <div class="max-resolution">
       <p class="max-resolution__text">
