--- a/profile.html
+++ b/profile.html
@@ -8,8 +8,8 @@
     <title>Perfil | Netflix</title>
   </head>
   <body>
-    <div id="page-content">
-      <div class="status-bar">
+    <main id="page-content">
+      <header class="status-bar">
         <p class="status-bar__time">9:41</p>
         <div class="status-bar__icons">
           <img
@@ -23,10 +23,10 @@
             alt="Bateria"
           />
         </div>
-      </div>
+      </header>
 
       <div id="animation">
-        <div class="edit-navbar">
+        <nav class="edit-navbar">
           <div class="edit-navbar__space"></div>
           <img
             class="logo logo--small"
@@ -36,10 +36,10 @@
           <button class="edit-navbar__btn">
             <img src="assets/icons/pencil.svg" alt="Editar" />
           </button>
-        </div>
+        </nav>
 
         <div class="center">
-          <div class="profile-list--grid">
+          <section class="profile-list--grid">
             <a class="profile-list__item" href="home.html">
               <img
                 class="profile-list__img profile-list__img--big"
@@ -80,10 +80,10 @@
               />
               <h2 class="profile-list__text">Add Profile</h2>
             </a>
-          </div>
+          </section>
         </div>
       </div>
-    </div>
+    </main>
 
     <div class="max-resolution">
       <p class="max-resolution__text">
