--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
     <title>Search | Netflix</title>
   </head>
   <body>
-    <div id="page-content">
+    <main id="page-content">
       <div class="status-bar">
         <p class="status-bar__time">9:41</p>
         <div class="status-bar__icons">
@@ -25,7 +25,7 @@
         </div>
       </div>
 
-      <div class="search-input" style="margin-bottom: 20px">
+      <section class="search-input" style="margin-bottom: 20px">
         <input
           id="search"
           class="search-input__field"
@@ -47,11 +47,11 @@
             alt="Procurar"
           />
         </button>
-      </div>
+      </section>
 
       <h1 class="title">Top Searches</h1>
 
-      <div class="search-movies">
+      <section class="search-movies">
         <div class="search-movie__background" style="margin-bottom: 3px">
           <div class="search-movie">
             <img
@@ -131,10 +131,10 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <div class="bottom-navbar__background">
-        <div class="bottom-navbar">
+        <nav class="bottom-navbar">
           <a href="home.html" class="bottom-navbar__button">
             <img src="assets/icons/home.svg" alt="Home" />
             <p class="bottom-navbar__text">Home</p>
@@ -161,9 +161,9 @@
             <img src="assets/icons/more.svg" alt="Mais" />
             <p class="bottom-navbar__text">More</p>
           </a>
-        </div>
+        </nav>
       </div>
-    </div>
+    </main>
 
     <div class="max-resolution">
       <p class="max-resolution__text">
